--- a/bot/package.json
+++ b/bot/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "discord",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  },
-  "dependencies": {
-    "discord.js": "^14.18.0",
-    "socket.io": "^4.8.1",
-    "zod": "^3.24.3"
-  }
+    "name": "discord",
+    "module": "main.ts",
+    "type": "module",
+    "scripts": {
+        "start": "bun main.ts"
+    },
+    "devDependencies": {
+        "@types/bun": "latest"
+    },
+    "peerDependencies": {
+        "typescript": "^5.0.0"
+    },
+    "dependencies": {
+        "discord.js": "^14.18.0",
+        "socket.io": "^4.8.1",
+        "zod": "^3.24.3"
+    }
 }
