--- a/bot/package.json
+++ b/bot/package.json
@@ -3,7 +3,8 @@
     "module": "main.ts",
     "type": "module",
     "scripts": {
-        "start": "bun main.ts"
+        "start": "bun main.ts",
+        "dev": "bun --watch main.ts"
     },
     "devDependencies": {
         "@types/bun": "latest"
